# varlord

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REFACTORING_PROGRESS.md  SETUP.md  UV_SETUP.md  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: Makefile
docs/source/: conf.py  design.rst  quickstart.rst
docs/source/_static/: custom.css
docs/source/api_reference/: exceptions.rst  index.rst  model_validation.rst  sources.rst  validators.rst
docs/source/examples/: index.rst
docs/source/tutorial/: advanced_features.rst  dynamic_updates.rst  getting_started.rst  multiple_sources.rst  nested_configuration.rst  validation.rst
docs/source/user_guide/: cli_commands.rst  configuration_models.rst  custom_sources.rst  dynamic_updates.rst  etcd.rst  faq.rst  index.rst  key_mapping.rst  metadata_fields.rst  priority.rst  sources.rst  validation.rst
examples/: README.md  basic_example.py  comprehensive_example.py  logging_example.py  nested_validation_example.py  priority_example.py  real_world_app_example.py  validation_example.py
examples/config/: app.yaml
scripts/: README.md  security-scan.sh  verify-refactoring.sh
tests/: README.md  conftest.py  test_case_normalization.py  test_cli_help.py  test_config.py  test_config_check_variables.py  test_config_check_variables_strict.py  test_config_cli_flags.py  test_config_convenience.py  test_config_store_compatibility.py  test_config_validation.py  test_converters.py  test_etcd_connection.py  test_etcd_watch_integration.py  test_fixtures.py  test_integration.py  test_key_normalization.py  test_metadata.py  test_model_validation_comprehensive.py  test_nested_key_mapping.py  test_resolver.py  test_source_help.py  test_sources_cli.py  test_sources_defaults.py  test_sources_dotenv.py  test_sources_env.py  test_sources_etcd_integration.py  test_tutorial_examples.py  test_validation.py  test_validators.py
tests/fixtures/: README.md
tests/fixtures/env/: test_config.env
tests/fixtures/json/: config_valid.json
tests/fixtures/toml/: config_valid.toml
tests/fixtures/yaml/: config_invalid_syntax.yaml  config_nested.yaml  config_valid.yaml
varlord/: __init__.py  config.py  converters.py  logging.py  metadata.py  model_validation.py  policy.py  resolver.py  source_help.py  store.py  validators.py
varlord/sources/: __init__.py  base.py  cli.py  defaults.py  dotenv.py  env.py  etcd.py
varlord/tests/: __init__.py
