[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "varlord"
dynamic = ["version"]
description = "A powerful Python configuration management library with support for defaults, CLI args, environment variables, .env files, and optional etcd integration with dynamic updates"
readme = "README.md"
requires-python = ">=3.7"
license = "Apache-2.0"
authors = [
    {name = "Varlord Team"}
]
keywords = ["configuration", "config", "env", "etcd", "settings", "cli-args"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
dotenv = [
    "python-dotenv>=0.19.0",
]
etcd = [
    "etcd3>=0.1.5",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "furo>=2024.1.0",
    "sphinx-autodoc-typehints>=1.19.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-design>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/lzjever/varlord"
Documentation = "https://varlord.readthedocs.io"
Repository = "https://github.com/lzjever/varlord"
Issues = "https://github.com/lzjever/varlord/issues"

[tool.setuptools.packages.find]
exclude = [
    "tests*",
    "examples*",
    "docs*",
    "*.tests*",
]

[tool.setuptools.dynamic]
version = {attr = "varlord.__version__"}

[tool.setuptools.package-data]
varlord = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["varlord"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "venv",
    ".pytest_cache",
    ".mypy_cache",
]

